chain/api/src/snapshots/blokli_chain_api__safe_execution__tests__inspect_safe_execution_logs_failure_event.snap
---
source: chain/api/src/safe_execution.rs
expression: "&result"
---
success: false
safe_tx_hash: "0x0000000000000000000000000000000000000000000000000000000000000000"
revert_reason: ~
