chain/api/src/snapshots/blokli_chain_api__safe_execution__tests__inspect_safe_execution_logs_indexed_tx_hash.snap
---
source: chain/api/src/safe_execution.rs
expression: "&result"
---
success: true
safe_tx_hash: "0x4242424242424242424242424242424242424242424242424242424242424242"
revert_reason: ~
