chain/api/src/snapshots/blokli_chain_api__safe_execution__tests__inspect_safe_execution_logs_module_failure_event.snap
---
source: chain/api/src/safe_execution.rs
expression: snap(&result)
---
success: false
safe_tx_hash: ~
revert_reason: ~
