chain/api/src/snapshots/blokli_chain_api__safe_execution__tests__inspect_safe_execution_logs_short_data_returns_none_hash.snap
---
source: chain/api/src/safe_execution.rs
expression: snap(&result)
---
success: true
safe_tx_hash: ~
revert_reason: ~
