chain/api/src/snapshots/blokli_chain_api__safe_execution__tests__inspect_safe_execution_logs_success_event.snap
---
source: chain/api/src/safe_execution.rs
expression: "&result"
---
success: true
safe_tx_hash: "0x42000000000000000000000000000000000000000000000000000000000000ff"
revert_reason: ~
